# alore

./: .gitignore  CHANGELOG.txt  CREDITS.txt  LICENSE.txt  Makefile.depend  Makefile.in  README.txt  config.h.in  configure  configure.ac
check/: check.alo  dchk.alo  roundtrip.alo  t.alo  test-parse.alo  test-semanal.alo  test.alo
check/__dynchk/: helpers.alo  ops.alo  output.alo
check/analyse/: analyse.alo  states.alo
check/checker/: check-expr.alo  check.alo  checkisect.alo  checkrange.alo  collapse.alo  constraints.alo  erasetype.alo  expandtype.alo  infer.alo  join.alo  maptosuper.alo  maptypevar.alo  meet.alo  messages.alo  rangecallable.alo  solve.alo  subtypes.alo  util.alo
check/dyncheck/: coerce.alo  erasetypes.alo  maptosuper.alo  maptypevar.alo  pprinter.alo  pprinttype.alo  propersubtype.alo  rttypevars.alo  transform-func.alo  transform-type.alo  transform.alo  util.alo
check/errors/: errors.alo
check/lex/: lex.alo
check/nodes/: nodes.alo  repr.alo  returncoll.alo  strconv.alo  traverser.alo  typeinfo.alo  visitor.alo
check/output/: output.alo  outputtype.alo
check/parser/: parse.alo  parsetype.alo  util.alo
check/semanal/: normalize.alo  semanal.alo  symtable.alo  typeanal.alo  typeinfomap.alo  util.alo
check/shutil/: shutil.alo
check/testchk/: paths.alo  suite.alo  test-check.alo  test-dyncheck-eval.alo  test-dyncheck-trans.alo  test-encodings.alo  test-genconstraints.alo  test-join.alo  test-meet.alo  test-misctypeops.alo  test-parse-errors.alo  test-parse-type.alo  test-parser.alo  test-roundtrip.alo  test-semanal-errors.alo  test-semanal-symtable.alo  test-semanal-types-errors.alo  test-semanal-types.alo  test-semanal.alo  test-solve.alo  test-subtyping.alo  test-types.alo  test-typexport.alo  typefixture.alo
check/types/: consttype.alo  replacetvars.alo  sametypes.alo  typequery.alo  typerepr.alo  types.alo  typestr.alo  typetranslator.alo  typevisitor.alo  util.alo
check/util/: strutil.alo
demo/: README.txt
demo/cgi/: README.txt  dump.alo  hello.alo  wiki.alo
demo/classes/: README.txt  complex.alo  complex2.alo  test-complex.alo  test-complex2.alo
demo/games/: README.txt  hangman.alo  words.txt
demo/scripts/: README.txt  hello.alo  nlargest.alo  primes.alo  wordfreq.alo
demo/sockets/: README.txt  chat.alo
doc/: alore.css  alore.man  alorec.man  base64.html  bitop.html  capi.html  capi_arithmetic_operations.html  capi_array_operations.html  capi_call_operations.html  capi_collection_operations.html  capi_common_operations.html  capi_comparison_operations.html  capi_defining_classes.html  capi_defining_functions.html  capi_defining_globals.html  capi_defining_interfaces.html  capi_defining_modules.html  capi_exception_handling.html  capi_float_operations.html  capi_garbage_collector_issues.html  capi_getting_started.html  capi_global_operations.html  capi_index.html  capi_instance_binary_data.html  capi_int_operations.html  capi_lowlevel_operations.html  capi_member_operations.html  capi_misc_common_operations.html  capi_misc_operations.html  capi_mixing_alore_and_c.html  capi_module_basics.html  capi_overview.html  capi_private_definitions.html  capi_str_operations.html  capi_tuple_operations.html  capi_type_specific_operations.html  capi_using_cplusplus.html  capi_using_std_c_libs.html  capi_variant_macros.html  casts.html  (+76 more)
lib/__os/: __os.alo
lib/argparse/: arguments.alo  help.alo  helpers.alo  parser.alo  textwrapper.alo
lib/cgi/: cgi.alo
lib/email/: message.alo
lib/fileutil/: glob.alo  match.alo
lib/glob/: glob.alo  match.alo
lib/http/: http.alo
lib/memorystream/: memstream.alo
lib/pack/: pack.alo  packstream.alo
lib/re/: re.alo
lib/string/: misc.alo
lib/tempfile/: tempfile.alo
lib/time/: date.alo  datetime.alo  format.alo  parse.alo  time.alo  util.alo
lib/unittest/: unittest.alo
lib/url/: url.alo
release/: .gitignore
src/: aconfig.h  alore.h  aloreapi.c  array.h  athread.h  athread_pthread.c  athread_win32.c  base64_module.c  bitop_module.c  call.c  class.c  class.h  cmem.c  cmodules.c  cmodules.h  common.c  common.h  compile.c  compile.h  cutil.h  debug_memory.c  debug_params.h  debug_runtime.c  debug_runtime.h  display.c  displaycode.c  dummy_module.c  dynaload.c  dynaload.h  dynload.c  encodings_module.c  encodings_module.h  encodings_tables.c  errmsg.c  errmsg.h  errno_info.c  errno_info.h  errno_module.c  errno_module.h  error.c  (+111 more)
stubs/__pack/: pack.alo
stubs/__re/: __re.alo
stubs/__string/: string.alo
stubs/__testc/: testc.alo
stubs/__time/: time.alo
stubs/base64/: base64.alo
stubs/bitop/: bitop.alo
stubs/encodings/: codecs.alo
stubs/errno/: errno.alo
stubs/io/: io.alo
stubs/loader/: loader.alo
stubs/math/: math.alo
stubs/nanotime/: nanotime.alo
stubs/os/: os.alo
stubs/random/: random.alo
stubs/reflect/: reflection.alo
stubs/serversocket/: serversocket.alo
stubs/set/: set.alo
stubs/socket/: socket.alo
stubs/std/: std.alo
stubs/sys/: sys.alo
stubs/thread/: thread.alo
stubs/unicode/: unicode.alo
test/: test.alo  test.sh
test/addit/: cgi-form.html  test-alore.sh  test-alorec.sh  test-cgi.alo
test/calltest/: calltest.alo
test/codegen/: test-regressions.alo
test/data/: ascii-errors.alo  compile-errors.txt  loader-1-anonfunc.alo  loader-1-basic.alo  loader-1-cleanup.alo  loader-1-cleanup2.alo  loader-1-cleanup3.alo  loader-1-errors-1.alo  loader-1-errors-2.alo  loader-1-gc-2.alo  loader-1-gc.alo  loader-1-import-2.alo  loader-1-import-3.alo  loader-1-import.alo  traceback-1.alo  traceback-2.alo  traceback-3.alo  utf8-bom-error-1.alo  utf8-bom-error-2.alo  utf8-bom-error-3.alo  utf8-bom-hashbang.alo  utf8-bom.alo  utf8-bom2.alo  utf8-errors.alo  utf8-implicit.alo
test/gctest/: gctest.alo
test/helpers/: helpers.alo  parse.alo
test/iohelpers/: iohelpers.alo
test/libs/: test-argparse-arguments.alo  test-argparse-help.alo  test-argparse-parse.alo  test-argparse-usage.alo  test-argparse-wrap.alo  test-base64.alo  (+36 more)
util/: alorec.alo  conv.alo  conv.sh  errno.alo  gen-exports.sh  make_release.sh  whenbroke.alo
windows/: alore.rc
(+147 files in other folders)
